test/valid/builtins/parse.js
var x = parseFloat('3.0') == 3.0;

var y = parseInt('3', 10) == 3;
