test/invalid/builtins/parse.js
var x = parseFloat(3.0);


